Coming soon banner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  Hello world
+  <h1>COMING SOON...</h1>
+  <p>I should start uploading class materials in 48hrs</p>
   <script src="script.js"></script>
 
  <!--
